# petridish

./: .gitignore  README.md  pyproject.md  pyproject.toml
backend/neural_petridish.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/petridish/: __init__.md  __init__.py  __main__.md  __main__.py  benchmark_lifecycle_ablation.md  benchmark_lifecycle_ablation.py  benchmark_recovery.md  benchmark_recovery.py  benchmark_repair_phase.md  benchmark_repair_phase.py  benchmark_sequences.md  benchmark_sequences.py  benchmark_shakespeare.md  benchmark_shakespeare.py  channels.md  channels.py  config.md  config.py  corpus_task.md  corpus_task.py  graph_layout.md  graph_layout.py  laboratory.md  laboratory.py  lifecycle_profiles.md  lifecycle_profiles.py  mnist_config.md  mnist_config.py  mnist_curriculum.md  mnist_curriculum.py  mnist_data.md  mnist_data.py  mnist_experiment.md  mnist_experiment.py  mnist_hyperparameters.md  mnist_hyperparameters.py  mnist_model.md  mnist_model.py  mnist_protocol.md  mnist_protocol.py  (+52 more)
backend/tests/: test_laboratory.md  test_laboratory.py  test_mnist.md  test_mnist.py  test_protocol.md  test_protocol.py  test_runtime.md  test_runtime.py  test_sequence.md  test_sequence.py  test_simulation.md  test_simulation.py
docs/: architecture.md  codex-4090-handoff.md  codex-4090-results.md  experiment-results.md  laboratory.md  sequence-benchmark-results.md
frontend/: index.html  index.md  package-lock.json  package.json  package.md  tsconfig.md  vite.config.md  vite.config.ts
scripts/: deploy_lab_remote.md  deploy_lab_remote.sh
(+31 files in other folders)
